src/app/shared/components/modal/modal.scss
@use "../../../../assets/styles/mixins" as *;
@use "../../../../assets/styles/variables" as *;

.modal-background {
  z-index: 10;
  position: fixed;
  width: 100%;
  height: 100%;
  inset: 0;
  background-color: rgba(38, 50, 56, 0.3);

  display: grid;
  transition: opacity 0.14s ease;
}


.modal {
  justify-self: center;
  align-self: center;
  background-color: #fff;
  padding: 44px 40px 40px 40px;
  border-radius: 20px;

  &.delete-modal {
    width: 448px;
  }

  h2 {
    margin-bottom: 40px;
  }

  p {
    color: #263238;
    font-size: 18px;
    font-style: normal;
    font-weight: 400;
    letter-spacing: 0.25px;
    min-height: 95px;
    margin-bottom: 12px;
  }

  .modal-actions {
    display: flex;
    justify-content: flex-end;
    gap: 4px;
    margin-top: 8px;

    .btn {
      &.btn-cancel {
        @include btn-style(
            $delete-default-color,
            transparent,
            rgba(60, 124, 248, 0.10),
            rgba(25, 78, 182, 0.20)
        );
      }

      &.btn-delete {
        @include btn-style(
            #fff,
            $delete-default-color,
            #3C7CF8,
            #194EB6,
            #D8DEE9
        );
      }
    }
  }
}

